syntax = "proto3";

option csharp_namespace = "Users.Api.Grpc";
option go_package = "./;users";

package users;

// User messages
message CreateUserRequest {
  string telegram_id = 1;
  string chat_id = 2;
  string first_name = 3;
  string last_name = 4;
  string username = 5;
  string language = 6;
  string phone_number = 7;
  string referrer = 8;
  bool is_blocked = 9;
  bool has_vehicle = 14;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByTelegramIdRequest {
  string telegram_id = 1;
}

message GetUserByPhoneRequest {
  string phone_number = 1;
}

message GetUserByChatIdRequest {
  string chat_id = 1;
}

message UserExistsRequest {
  string telegram_id = 1;
  string phone_number = 2;
  string chat_id = 3;
  string user_id = 4;
}

message CheckUserHasVehicleRequest {
  string user_id = 1;
  string telegram_id = 2;
}

message UpdateUserProfileRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string phone_number = 5;
  string language = 6;
}

message SetUserBlockedRequest {
  string id = 1;
  bool is_blocked = 2;
}

message SetUserHasVehicleRequest {
  string id = 1;
  bool has_vehicle = 2;
}

message SetUserLanguageRequest {
  string id = 1;
  string language = 2;
}

message SetUserPhoneNumberRequest {
  string id = 1;
  string new_phone_number = 2;
}

message SetUserAdminFlagsRequest {
  string id = 1;
  bool is_admin = 2;
  bool is_suspicious = 3;
  bool is_premium = 4;
}

// Response messages
message UserResponse {
  string id = 1;
  string telegram_id = 2;
  string chat_id = 3;
  string first_name = 4;
  string last_name = 5;
  string username = 6;
  string language = 7;
  string phone_number = 8;
  string referrer = 9;
  bool is_blocked = 10;
  bool is_block = 11;
  bool is_admin = 12;
  bool is_suspicious = 13;
  bool is_premium = 14;
  bool has_vehicle = 15;
  string created_at = 16;
  string modified_at = 17;
}

message UserExistsResponse {
  bool exists = 1;
  string user_id = 2;
  string found_by = 3;
}

message CheckUserHasVehicleResponse {
  bool has_vehicle = 1;
  bool user_exists = 2;
  string user_id = 3;
  string found_by = 4;
}

message SuccessResponse {
  bool success = 1;
  string message = 2;
}

message GetUserRegistrationStatusRequest {
  string user_id = 1;
}

message GetUserRegistrationStatusResponse {
  string status = 1;
}

message GetReferrerRequest {
  string user_id = 1;
}

message GetReferrerResponse {
  string referrer_id = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
  int32 total = 2;
}

message PatchUpdateUserRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string phone_number = 5;
  string language = 6;
  bool is_blocked = 7;
  bool has_vehicle = 11;
}

// Service definition
service UsersService {
  // User operations
  rpc Create (CreateUserRequest) returns (UserResponse);
  rpc GetById (GetUserByIdRequest) returns (UserResponse);
  rpc GetByTelegramId (GetUserByTelegramIdRequest) returns (UserResponse);
  rpc GetByPhone (GetUserByPhoneRequest) returns (UserResponse);
  rpc GetByChatId (GetUserByChatIdRequest) returns (UserResponse);
  rpc Exists (UserExistsRequest) returns (UserExistsResponse);
  rpc CheckHasVehicle (CheckUserHasVehicleRequest) returns (CheckUserHasVehicleResponse);
  rpc UpdateProfile (UpdateUserProfileRequest) returns (SuccessResponse);
  rpc SetBlocked (SetUserBlockedRequest) returns (SuccessResponse);
  rpc SetHasVehicle (SetUserHasVehicleRequest) returns (SuccessResponse);
  rpc SetLanguage (SetUserLanguageRequest) returns (SuccessResponse);
  rpc SetPhoneNumber (SetUserPhoneNumberRequest) returns (SuccessResponse);
  rpc GetRegistrationStatus (GetUserRegistrationStatusRequest) returns (GetUserRegistrationStatusResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc PatchUpdate (PatchUpdateUserRequest) returns (SuccessResponse);
}
